--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,1 +1,18 @@
-font_family MesloLGS NF
+# map f1 launch --cwd=current
+# map f2 launch --cwd=current --type=tab
+
+# use default shell
+shell .
+
+# use default editor
+editor .
+
+# font_family MesloLGS NF
+font_family ProFont for Powerline
+font_size 12
+
+background_opacity 0.75
+# dim_opacity 0.75
+
+
+copy_on_select yes
